[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-config-kit"
version = "0.1.0"
description = "Layered configuration loader merging env vars, files, and defaults"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_config_kit"]
