[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-config-kit"
version = "0.1.5"
description = "Layered configuration loader merging env vars, files, and defaults"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-config-kit#readme"
Repository = "https://github.com/philiprehberger/py-config-kit"
Issues = "https://github.com/philiprehberger/py-config-kit/issues"
Changelog = "https://github.com/philiprehberger/py-config-kit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_config_kit"]
