[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-config-kit"
version = "0.5.0"
description = "Layered configuration loader merging env vars, files, and defaults."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["config", "configuration", "settings", "environment", "layered"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-config-kit#readme"
Repository = "https://github.com/philiprehberger/py-config-kit"
Issues = "https://github.com/philiprehberger/py-config-kit/issues"
Changelog = "https://github.com/philiprehberger/py-config-kit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_config_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
